welcome.lessons.welcome.array.array123.Array123.scala.error
array123:5: error: ';' expected but integer literal found.
    if ( nums(i) == 1 || nums(i) == 2 || nums(i)) == 3{
                                                     ^