welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
  var t : Int= nums.length ;
  var p: Int = 0 ;
  for (i <- 0 to t-1){
    if ( nums(i) == 1 || nums(i) == 2 || nums(i)) == 3{
      return true ;
    }
  }
  return false
}

    

    